# schema

./: .gitignore  Cargo.toml  README.md  massive  massive2  output  output2
src/: json_schema.rs  main.rs  main_old.rs  path.rs  posts.schema  process.rs  reader.rs  schema.rs  tags.schema
