[package]
name = "schema"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bitflags = { version = "2.7.0", features = ["serde"] }
clap = { version = "4.5.26", features = ["derive"] }
flume = "0.11.1"
indicatif = { version = "0.17.9", features = ["rayon"] }
memmap2 = "0.9.5"
rayon = "1.10.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
simd-json = "0.14.3"
stacker = "0.1.17"
thread_local = "1.1.8"
